deployments/product-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-backend
  template:
    metadata:
      labels:
        app: product-backend
    spec:
      containers:
        - name: product-backend
          image: giovannimbesi/product-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080 
---

apiVersion: v1
kind: Service
metadata:
  name: product-backend-service
spec:
  selector:
    app: product-backend
  ports:
    - protocol: "TCP"
      port: 8080 # Porta interna del servizio nel cluster
      targetPort: 8080 # Porta esposta dal servizio
      # nodePort: 30001 # Porta pubblica
    # type: NodePort
