deployments/product-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-frontend
  template:
    metadata:
      labels:
        app: product-frontend
    spec:
      containers:
        - name: product-frontend
          image: giovannimbesi/product-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: product-frontend-service
spec:
  selector:
    app: product-frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  type: NodePort
