deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
spec:
  rules:
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: product-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-frontend-service
                port:
                  number: 3000
